# ascorbic

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  meson.build  meson.options
include/ascorbic/: ast.hpp  diagnostic.hpp  lexer.hpp  linter.hpp  parser.hpp  rule.hpp  source_location.hpp  token.hpp
include/ascorbic/rules/: empty_block.hpp  missing_return.hpp  unreachable_code.hpp  unused_import.hpp  unused_var.hpp
src/: diagnostic.cpp  lexer.cpp  linter.cpp  main.cpp  meson.build  parser.cpp
src/rules/: empty_block.cpp  missing_return.cpp  unreachable_code.cpp  unused_import.cpp  unused_var.cpp
